--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
  
 <br>
 <font color="#990000" face='verdana' style="font-family: 'Tapestry', cursive;font-size:30px;">
-Purple mist follows her with every step she takes. When she speaks it's clear that there's no voice that escapes her lips. Yet words seem to impart in the a person's mind. Every step she takes is soft almost silent with the exception of those with great hearing. She doesn't seem to speak more than what's needed.
+Purple mist follows her with every step she takes. When she speaks it's clear that there's no voice that escapes her lips. Yet words seem to impart in the a person's mind. Every step she takes is soft almost silent with the exception of those with great hearing. She doesn't seem to communicate more than what's needed.
 </font>
 
 <br>
